# actix-web-rest-service

./: .env  Cargo.toml  README.md  api.rest
migrations/2022-12-02-023832_create_people/: up.sql
migrations/2022-12-02-024026_create_users/: up.sql
migrations/2022-12-02-024144_create_login_history/: up.sql
migrations/2022-12-02-024357_add_login_session_field_to_users_table/: down.sql  up.sql
src/: error.rs  main.rs  schema.rs  secret.key
src/api/: account_controller.rs  address_book_controller.rs  ping_controller.rs
src/config/: app.rs  db.rs
src/middleware/: auth_middleware.rs  mod.rs
src/models/: login_history.rs  mod.rs  pagination.rs  preson.rs  response.rs  test.rs  user.rs  user_token.rs
src/services/: account_book_service.rs  account_service.rs  mod.rs
src/utils/: token_utils.rs
